Add inter-communication of officer chat

--- a/config/settings.example.json
+++ b/config/settings.example.json
@@ -98,6 +98,7 @@
         "interGuild": {
             "enabled": true,
             "officerToGuildChat": false,
+            "officerToOfficerChat": true,
             "showTags": true,
             "showSourceTag": true,
             "shareableEvents": [
