Revert "Add Manager to send Discord bridge messages"
This reverts commit 8c2a0586ff44954ffb0f92ca18cc57ae20f09dae.

--- a/config/settings.example.json
+++ b/config/settings.example.json
@@ -84,13 +84,11 @@
         "channels": {
             "chat": {
                 "id": "CHAT_CHANNEL_ID",
-                "webhookUrl": "OPTIONAL_WEBHOOK_URL",
-                "_comment": "WARNING : You need an https://discord.com/ url to work"
+                "webhookUrl": "OPTIONAL_WEBHOOK_URL"
             },
             "staff": {
                 "id": "STAFF_CHANNEL_ID",
-                "webhookUrl": "OPTIONAL_WEBHOOK_URL",
-                "_comment": "WARNING : You need an https://discord.com/ url to work"
+                "webhookUrl": "OPTIONAL_WEBHOOK_URL"
             }
         },
         "webhook": {
