--- a/config/settings.example.json
+++ b/config/settings.example.json
@@ -88,11 +88,13 @@
         "channels": {
             "chat": {
                 "id": "CHAT_CHANNEL_ID",
-                "webhookUrl": "OPTIONAL_WEBHOOK_URL"
+                "webhookUrl": "OPTIONAL_WEBHOOK_URL",
+                "_comment": "WARNING : You need an https://discord.com/ url to work"
             },
             "staff": {
                 "id": "STAFF_CHANNEL_ID",
-                "webhookUrl": "OPTIONAL_WEBHOOK_URL"
+                "webhookUrl": "OPTIONAL_WEBHOOK_URL",
+                "_comment": "WARNING : You need an https://discord.com/ url to work"
             }
         },
         "webhook": {
@@ -103,10 +105,13 @@
             "enabled": true,
             "officerToGuildChat": false,
             "officerToOfficerChat": true,
-            "showTags": true,
-            "showSourceTag": true,
+            "officerToDiscord": true,
+            "discordToMinecraft": true,
+            "showTags": false,
+            "showSourceTag": false,
             "shareableEvents": [
                 "welcome",
+                "leave",
                 "kick",
                 "promote",
                 "demote",
@@ -132,13 +137,23 @@
                 "limit": 10,
                 "window": 60000
             }
+        }
+    },
+    "discord": {
+        "permissions": {
+            "moderatorRoles": [
+                "MODERATOR_ROLE_ID"
+            ],
+            "adminRoles": [
+                "ADMINISTRATOR_ROLE_ID"
+            ]
         },
-        "messageQueue": {
-            "maxSize": 1000,
-            "processingInterval": 1000,
-            "maxRetries": 3,
-            "retryDelay": 2000,
-            "priorityLevels": ["high", "normal", "low"]
+        "logChannels": {
+            "default": "DEFAULT_LOG_CHANNEL_ID",
+            "invite": "INVITE_LOG_CHANNEL_ID",
+            "kick": "KICK_LOG_CHANNEL_ID",
+            "promote": "PROMOTE_LOG_CHANNEL_ID",
+            "demote": "DEMOTE_LOG_CHANNEL_ID"
         }
     },
     "features": {
